coloquei o nome do site e o subtitulo do site, fiz uma introdução para o meu site e coloquei o link de um video

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>ECOsméticos</title>
 </head>
 <body>
-    
+<h1> ECOsméticos, onde a sua rotina de beleza fica ainda mais fácil!</h1>
+<h2>Benefícios para a Pele e os Lábios, realce sua beleza natural.
+</h2>
+<p>Bem-vindo à nossa loja de maquiagens naturais, um espaço dedicado à beleza consciente e sustentável. Aqui, acreditamos que a maquiagem deve realçar sua beleza única, sem abrir mão do cuidado com a sua pele e do respeito ao meio ambiente. Explore nossos produtos feitos com ingredientes naturais, livres de componentes tóxicos, e descubra uma nova forma de se expressar com elegância, saúde e responsabilidade. Sua beleza natural merece o melhor!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H3Cv9mrIO5o?si=nb1wpcP6qQblEESX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
