--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECOsméticos</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Beleza Shop</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1> ECOsméticos, onde a sua rotina de beleza fica ainda mais fácil!</h1>
-<h2>Benefícios para a Pele e os Lábios, realce sua beleza natural.
-</h2>
-<p>Bem-vindo à nossa loja de maquiagens naturais, um espaço dedicado à beleza consciente e sustentável. Aqui, acreditamos que a maquiagem deve realçar sua beleza única, sem abrir mão do cuidado com a sua pele e do respeito ao meio ambiente. Explore nossos produtos feitos com ingredientes naturais, livres de componentes tóxicos, e descubra uma nova forma de se expressar com elegância, saúde e responsabilidade. Sua beleza natural merece o melhor!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/H3Cv9mrIO5o?si=nb1wpcP6qQblEESX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <!-- Cabeçalho -->
+    <header>
+        <h1>Beleza Shop</h1>
+        <nav>
+            <a href="#">Início</a>
+            <a href="#">Produtos</a>
+            <a href="#">Promoções</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
+
+    <!-- Seção de Produtos -->
+    <section class="products">
+        <h2>Produtos em Destaque</h2>
+        <div class="product-list">
+            <div class="product-item">
+                <img src="https://via.placeholder.com/200x300" alt="Produto 1">
+                <h3>Base Líquida</h3>
+                <p>R$ 99,99</p>
+                <button>Comprar</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/200x300" alt="Produto 2">
+                <h3>Paleta de Sombras</h3>
+                <p>R$ 149,99</p>
+                <button>Comprar</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/200x300" alt="Produto 3">
+                <h3>Máscara de Cílios</h3>
+                <p>R$ 69,99</p>
+                <button>Comprar</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; 2025 Beleza Shop. Todos os direitos reservados.</p>
+    </footer>
+
 </body>
 </html>
