coloquei a descriçao do video e do site

--- a/index.html
+++ b/index.html
@@ -5,51 +5,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beleza Shop</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Los Santos Vibes</title>
+
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
-    <!-- Cabeçalho -->
     <header>
-        <h1>Beleza Shop</h1>
-        <nav>
-            <a href="#">Início</a>
-            <a href="#">Produtos</a>
-            <a href="#">Promoções</a>
-            <a href="#">Contato</a>
-        </nav>
+        <h1>ECosméticos</h1>
     </header>
 
-    <!-- Seção de Produtos -->
-    <section class="products">
-        <h2>Produtos em Destaque</h2>
-        <div class="product-list">
-            <div class="product-item">
-                <img src="https://via.placeholder.com/200x300" alt="Produto 1">
-                <h3>Base Líquida</h3>
-                <p>R$ 99,99</p>
-                <button>Comprar</button>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/200x300" alt="Produto 2">
-                <h3>Paleta de Sombras</h3>
-                <p>R$ 149,99</p>
-                <button>Comprar</button>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/200x300" alt="Produto 3">
-                <h3>Máscara de Cílios</h3>
-                <p>R$ 69,99</p>
-                <button>Comprar</button>
-            </div>
-        </div>
-    </section>
+    <main>
+        <h2>Sua marca de maquiagem de segurança</h2>
 
-    <!-- Rodapé -->
-    <footer>
-        <p>&copy; 2025 Beleza Shop. Todos os direitos reservados.</p>
-    </footer>
+        <p>
+        Somos uma marca de beleza sustentavel, onde deixamos sua pele linda e segura para não criar acnes e espinhas, somos a segurança da sua pele, somos a ECosméticos.
+        </p>
+
+        <h3>Assista ao trailer oficial:</h3>
+        <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/QkkoHAzjnUs" 
+            title="GTA V Trailer" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </main>
 
 </body>
 </html>
+
+
+
