--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Los Santos Vibes</title>
+    <title>ECosméticos</title>
 
     <link rel="stylesheet" href="style.css">
     
