--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h3>Assista ao trailer oficial:</h3>
         <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/QkkoHAzjnUs" 
+            src="https://youtu.be/H3Cv9mrIO5o?si=4Yze56PV5d2DhoWF"
             title="GTA V Trailer" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
